updated html to add links to first two projects as github pages instead of repositories

--- a/index.html
+++ b/index.html
@@ -17,9 +17,11 @@
 		<!-- Page Wrapper -->
 			<div id="page-wrapper">
 
+		
 				<!-- Header -->
 					<header id="header" class="alt">
 						<h1><a href="index.html">Lynn Figueroa</a></h1>
+
 						<nav>
 							<a href="#menu">Menu</a>
 						</nav>
@@ -59,7 +61,7 @@
 											HTML and CSS, focusing on utilizing the display: flex property in CSS.
 										
 										</p>
-										<a href="https://github.com/lynnfigueroa/UI-III-Flexbox" class="special">View Project</a>
+										<a href="https://lynnfigueroa.github.io/UI-III-Flexbox/">View Project</a>
 									</div>
 								</div>
 							</section>
@@ -74,7 +76,7 @@
 											I designed multiple pages and included elements such as CSS animations
 											and a form with various inputs.
 										</p>
-										<a href="https://github.com/lynnfigueroa/Sprint-Challenge--User-Interface" class="special">View Project</a>
+										<a href="https://lynnfigueroa.github.io/Sprint-Challenge--User-Interface/" class="special">View Project</a>
 									</div>
 								</div>
 							</section>
