updated html so links open in new windows

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 											HTML and CSS, focusing on utilizing the display: flex property in CSS.
 										
 										</p>
-										<a href="https://lynnfigueroa.github.io/UI-III-Flexbox/">View Project</a>
+										<a href="https://lynnfigueroa.github.io/UI-III-Flexbox/" target ='_blank'>View Project</a>
 									</div>
 								</div>
 							</section>
@@ -76,7 +76,7 @@
 											I designed multiple pages and included elements such as CSS animations
 											and a form with various inputs.
 										</p>
-										<a href="https://lynnfigueroa.github.io/Sprint-Challenge--User-Interface/" class="special">View Project</a>
+										<a href="https://lynnfigueroa.github.io/Sprint-Challenge--User-Interface/" target='_blank' class="special">View Project</a>
 									</div>
 								</div>
 							</section>
@@ -91,7 +91,7 @@
 											CSS styling along with animations and hover effects to create
 											this page.
 										</p>
-										<a href="https://codepen.io/lynnfigueroa/pen/rNaNQNe" class="special">View Project</a>
+										<a href="https://codepen.io/lynnfigueroa/pen/rNaNQNe" target='_blank' class="special">View Project</a>
 									</div>
 								</div>
 							</section>
