--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
 						<div class="inner">
 							<h2 class="major">Get in touch</h2>
 							<p>To contact me about my work, please fill out the form below.</p>
-							<form method="post" action="#">
+							<form method="post" action="mailto:lynn.figueroa56@gmail.com" method='post' enctype="text/plain">
 								<div class="fields">
 									<div class="field">
 										<label for="name">Name</label>
